inclusao de detalhes de versão e ajuste para evitar erros na geração de relatórios

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
         - RUN_TEST=true
         - MERGE_RESULTS=false
         - REPORT_FOLDER=report
+        - HEAP=-Xms2g -Xmx2g -XX:MaxMetaspaceSize=256m
     volumes:
         - ~/files/jmeter/jmx:/opt/jmx
         - ~/files/jmeter/results:/opt/results
